PORTFOLIO-2 fix toggle z-index

--- a/src/components/navigation/Toggle.module.scss
+++ b/src/components/navigation/Toggle.module.scss
@@ -31,7 +31,7 @@
   transition: 0.2s ease;
   border-bottom-right-radius: 3.5rem;
   box-shadow: 1px 1px 2px 4px #0f172a;
-  z-index: 30;
+  z-index: 100;
 }
 
 .toggle:hover{
